Adding destination number to config

--- a/config.template.json
+++ b/config.template.json
@@ -17,6 +17,7 @@
     "twilio": {
         "accountSID": "accountSID",
         "authToken": "authToken",
-        "phoneNumber": "phoneNumber"
+        "phoneNumber": "phoneNumber",
+        "destinationNumber": "phoneNumber"
     }
 }
